Bug #27047 INFORMATION_SCHEMA table cannot have BIGINT fields
Submitted: 12 Mar 2007 14:13 Modified: 1 May 2007 18:03
Reporter: Sergei Golubchik Email Updates:
Status: Closed
Category:Server: I_S Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Sergey Gluhov Target Version:

[12 Mar 2007 14:13] Sergei Golubchik
Description:
currently tables in I_S can only have INT, VARCHAR, DECIMAL, and DATETIME columns,
We need to support at least DOUBLE and BIGINT UNSIGNED. Preferrably also DATE, TIME, BLOB, FLOAT and all *INT variants.

How to repeat:
.
[12 Mar 2007 14:33] Giuseppe Maxia
Probably related to Bug#26600
[6 Apr 2007 17:21] Bugs System
Pushed into 5.0.40
[6 Apr 2007 17:25] Bugs System
Pushed into 5.1.18-beta
[10 Apr 2007 8:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24130

ChangeSet@1.2563, 2007-04-10 13:22:16+05:00, gluh@mysql.com +4 -0
  Bug#27047 INFORMATION_SCHEMA table cannot have BIGINT fields
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
[18 Apr 2007 11:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24763

ChangeSet@1.2563, 2007-04-18 16:13:53+05:00, gluh@mysql.com +5 -0
  Bug#27047 INFORMATION_SCHEMA table cannot have BIGINT fields
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
[24 Apr 2007 10:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/25253

ChangeSet@1.2564, 2007-04-24 15:39:12+05:00, gluh@mysql.com +4 -0
  Bug#27047 INFORMATION_SCHEMA table cannot have BIGINT fields(additional fix)
  added MY_I_S_MAYBE_NULL & MY_I_S_UNSIGNED flags which are used as 
  field atributes for I_S schema table fields
[25 Apr 2007 12:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/25395

ChangeSet@1.2577, 2007-04-25 17:15:05+05:00, gluh@mysql.com +4 -0
  Bug#27047 INFORMATION_SCHEMA table cannot have BIGINT fields
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
[30 Apr 2007 12:59] Bugs System
Pushed into 5.1.18-beta
[1 May 2007 18:03] Paul DuBois
Noted in 5.1.18 changelog.