Bug#27047 INFORMATION_SCHEMA table cannot have BIGINT fields added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables

sql/item.h:
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
sql/sp.cc:
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
sql/sql_show.cc:
  added support for DATE, TIME, BLOB, FLOAT and all *INT variants in I_S tables
sql/table.h:
  added MY_I_S_MAYBE_NULL & MY_I_S_UNSIGNED flags which are used as 
  field atributes for I_S schema table fields